popup funciton added

--- a/index.html
+++ b/index.html
@@ -15,15 +15,30 @@
   </head>
   <body>
     <div class="container center">
-      <button type="submit" class="btn">Submit</button>
-      <div class="popup">
-        <div class="icon">
-          <i class="fa-solid fa-check"></i>
+      <button type="submit" onclick="openPopup()" class="btn">Submit</button>
+
+      <div>
+        <div class="popup" id="popup">
+          <div class="icon">
+            <i class="fa-solid fa-check"></i>
+          </div>
+          <h2>Thank You!</h2>
+          <p>Your details has been successfully submitted. Thanks!</p>
+          <button type="button" onclick="closePopup()">OK</button>
         </div>
-        <h2>Thank You!</h2>
-        <p>Your details has been successfully submitted. Thanks!</p>
-        <button type="button">OK</button>
       </div>
     </div>
+
+    <script>
+      let popup = document.getElementById("popup");
+
+      function openPopup() {
+        popup.classList.add("open-popup");
+      }
+
+      function closePopup() {
+        popup.classList.remove("open-popup");
+      }
+    </script>
   </body>
 </html>
